Dev/src/LeanData/objects/Marketing_Touch__c.object
<CustomObject>
    <fields>
        <fullName>Accelerated_Touch_Order__c</fullName>
        <label>Accelerated Touch Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Touch</fullName>
                </value>
                <value>
                    <fullName>Middle Touch</fullName>
                </value>
                <value>
                    <fullName>Last Touch</fullName>
                </value>
                <value>
                    <fullName>First &amp; Last Touch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Touches</relationshipLabel>
        <relationshipName>Marketing_Touches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribution_Value__c</fullName>
        <label>Attribution Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Created_Date__c</fullName>
        <label>Campaign Member Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Id__c</fullName>
        <label>Campaign Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Object_Type__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Member Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status_Weight__c</fullName>
        <label>Campaign Member Status Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type_Weight__c</fullName>
        <label>Campaign Type Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Marketing Touches</relationshipLabel>
        <relationshipName>Marketing_Touches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Closed_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Touches</relationshipLabel>
        <relationshipName>Marketing_Touches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Touch__c</fullName>
        <formula>Campaign__r.Reporting_Cost__c / Campaign__r.Reporting_Number_Of_Touches__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Touch</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Touch_Stage_Date__c</fullName>
        <label>Current Opportunity Touch Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_To_Opportunity_Close__c</fullName>
        <formula>Opportunity_Close_Date__c - DATEVALUE( Campaign_Member_Created_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Opportunity Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Opportunity_Created__c</fullName>
        <formula>Opportunity_Created_Date__c -  DATEVALUE( Campaign_Member_Created_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Opportunity Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FT_Attribution_Amount__c</fullName>
        <formula>Attribution_Value__c*FT_Attribution_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FT Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FT_Attribution_Percentage__c</fullName>
        <label>FT Attribution Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FT_Bookings_Attribution_Amount__c</fullName>
        <formula>IF( Opportunity__r.IsWon &amp;&amp; Opportunity__r.IsClosed, Weighted_FT_Attribution_Amount__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FT Bookings Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generated_Touch_Order__c</fullName>
        <label>Generated Touch Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Touch</fullName>
                </value>
                <value>
                    <fullName>Middle Touch</fullName>
                </value>
                <value>
                    <fullName>Last Touch</fullName>
                </value>
                <value>
                    <fullName>First &amp; Last Touch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LT_Attribution_Amount__c</fullName>
        <formula>Attribution_Value__c*LT_Attribution_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LT Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LT_Attribution_Percentage__c</fullName>
        <label>LT Attribution Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LT_Generated_Attr_Amount__c</fullName>
        <formula>Attribution_Value__c*LT_Generated_Attr_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LT Generated Attr Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LT_Generated_Attr_Percentage__c</fullName>
        <label>LT Generated Attr Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Marketing Touches</relationshipLabel>
        <relationshipName>Marketing_Touches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Accelerated_Attr_Amount__c</fullName>
        <formula>Attribution_Value__c*MT_Accelerated_Attr_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT Accelerated Attr Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_Accelerated_Attr_Percentage__c</fullName>
        <label>MT Accelerated Attr Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Attribution_Amount__c</fullName>
        <formula>Attribution_Value__c * MT_Attribution_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_Attribution_Percentage__c</fullName>
        <label>MT Attribution Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Generated_Attr_Amount__c</fullName>
        <formula>Attribution_Value__c*MT_Generated_Attr_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT Generated Attr Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_Generated_Attr_Percentage__c</fullName>
        <label>MT Generated Attr Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Next_Opportunity_Touch_Stage_Date__c</fullName>
        <label>Next Opportunity Touch Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Opportunity_Touch_Stage__c</fullName>
        <label>Next Opportunity Touch Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_Date__c</fullName>
        <label>Opportunity Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Index__c</fullName>
        <description>The index of the Opportunity Stage at the time of this touch occuring. I.e. 4 = The 4th status the Opportunity was in.</description>
        <label>Opportunity Stage Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Touch_Stage__c</fullName>
        <externalId>true</externalId>
        <label>Current Opportunity Touch Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Marketing Touches</relationshipLabel>
        <relationshipName>Marketing_Touches</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sourced_Attribution_Amount__c</fullName>
        <formula>Sourced_Attribution_Percentage__c * Attribution_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sourced_Attribution_Percentage__c</fullName>
        <label>Sourced Attribution Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sourced_Bookings_Attribution_Amount__c</fullName>
        <formula>IF( Opportunity__r.IsWon &amp;&amp; Opportunity__r.IsClosed, Weighted_Sourced_Attribution_Amount__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced Bookings Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <formula>Account__r.Reporting_Target_Account__c</formula>
        <label>Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Touch_Order__c</fullName>
        <label>Touch Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Touch</fullName>
                </value>
                <value>
                    <fullName>Middle Touch</fullName>
                </value>
                <value>
                    <fullName>Last Touch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touch_Pre_Opportunity__c</fullName>
        <label>Touch Pre-Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Opportunity</fullName>
                </value>
                <value>
                    <fullName>Post-Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touch_Pre_Sales__c</fullName>
        <label>Touch Pre-Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Post-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weighted_FT_Attribution_Amount__c</fullName>
        <formula>Weighted_FT_Attribution_Percentage__c *  Attribution_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted FT Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_FT_Attribution_Percentage__c</fullName>
        <label>Weighted FT Attribution Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_FT_Bookings_Attribution_Amount__c</fullName>
        <formula>IF( Opportunity__r.IsWon &amp;&amp; Opportunity__r.IsClosed, Weighted_FT_Attribution_Amount__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted FT Bookings Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_LT_Attribution_Amount__c</fullName>
        <formula>Weighted_LT_Attribution_Percentage__c *  Attribution_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted LT Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_LT_Attribution_Percentage__c</fullName>
        <label>Weighted LT Attribution Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_LT_Generated_Attr_Amount__c</fullName>
        <formula>Weighted_LT_Generated_Attr_Percentage__c *  Attribution_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted LT Generated Attr Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_LT_Generated_Attr_Percentage__c</fullName>
        <label>Weighted LT Generated Attr Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_MT_Accelerated_Attr_Amount__c</fullName>
        <formula>Weighted_MT_Accelerated_Attr_Percentage__c *  Attribution_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted MT Accelerated Attr Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_MT_Accelerated_Attr_Percentage__c</fullName>
        <label>Weighted MT Accelerated Attr Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_MT_Attribution_Amount__c</fullName>
        <formula>Attribution_Value__c * Weighted_MT_Attribution_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted MT Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_MT_Attribution_Percentage__c</fullName>
        <label>Weighted MT Attribution Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_MT_Generated_Attr_Amount__c</fullName>
        <formula>Weighted_MT_Generated_Attr_Percentage__c *  Attribution_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted MT Generated Attr Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_MT_Generated_Attr_Percentage__c</fullName>
        <label>Weighted MT Generated Attr Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_Sourced_Attribution_Amount__c</fullName>
        <formula>Weighted_Sourced_Attribution_Percentage__c * Attribution_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Sourced Attribution Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Sourced_Attribution_Percentage__c</fullName>
        <label>Weighted Sourced Attribution Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_Sourced_Bookings_Attribution__c</fullName>
        <formula>IF( Opportunity__r.IsWon &amp;&amp; Opportunity__r.IsClosed, Weighted_Sourced_Attribution_Amount__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Sourced Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Marketing Touch</label>
    <nameField>
        <displayFormat>MT-{000000000}</displayFormat>
        <label>Marketing_Touch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Touches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>